# semanticworkbench

assistants/prospector-assistant/: pyproject.toml
assistants/prospector-assistant/assistant/agents/: attachment_agent.py
mcp-servers/mcp-server-example/: README.md  pyproject.toml
mcp-servers/mcp-server-example/mcp_server/: config.py  server.py  start.py
mcp-servers/mcp-server-podcast/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  test_server.py
mcp-servers/mcp-server-podcast/docs/: status.md
mcp-servers/mcp-server-podcast/docs/adrs/: 0000-adr-template.md  0001-mcp-server-architecture.md  README.md
mcp-servers/mcp-server-podcast/docs/ai-context/: AI_ASSISTANT_GUIDE.md
mcp-servers/mcp-server-podcast/docs/plans/: api_specification.md  implementation_plan.md  service_adaptation.md
mcp-servers/mcp-server-podcast/mcp_server_podcast/: config.py  server.py  start.py
mcp-servers/mcp-server-podcast/mcp_server_podcast/models/: __init__.py  domain.py  resource.py
mcp-servers/mcp-server-podcast/mcp_server_podcast/resources/: __init__.py  audio_resources.py  document_resources.py  podcast_resources.py
mcp-servers/mcp-server-podcast/mcp_server_podcast/services/: __init__.py  audio_generator.py  document_processor.py  openai_agent.py  podcast_composer.py
mcp-servers/mcp-server-podcast/mcp_server_podcast/tools/: __init__.py  audio_tools.py  document_tools.py  podcast_tools.py
mcp-servers/mcp-server-podcast/mcp_server_podcast/utils/: __init__.py  progress_reporter.py  resource_id_manager.py
mcp-servers/mcp-server-podcast/tests/: __init__.py  conftest.py  test_audio_generator.py  test_document_processor.py  test_podcast_generation.py  test_utils.py
(+1 files in other folders)
