[project]
name = "mcp-server-podcast"
version = "0.1.0"
description = "Provides a generated podcast from uploaded materials"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.1"]

[dependency-groups]
dev = ["pyright>=1.1.389"]

[tool.uv]
package = true

[project.scripts]
mcp-server-podcast = "mcp_server_podcast.start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
