[project]
name = "mcp-server-podcast"
version = "0.1.0"
description = "Provides a generated podcast from uploaded materials"
authors = [{ name = "Semantic Workbench Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-core>=1.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.389",
    "ruff>=0.1.0"
]

[tool.uv]
package = true

[project.scripts]
mcp-server-podcast = "mcp_server_podcast.start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["mcp_server_podcast"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["**/__pycache__", "**/.pytest_cache"]